--- a/services.html
+++ b/services.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Услуги | Shofactom</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1><a href="index.html" style="color: #ffd700; text-decoration: none;">Shofactom</a></h1>
+        <span class="burger">☰</span>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
