--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shofactom — Мир Поэзии и Философии</title>
+    <title>Главная | Shofactom</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Shofactom</h1>
+        <h1><a href="index.html" style="color: #ffd700; text-decoration: none;">Shofactom</a></h1>
+        <span class="burger">☰</span>
         <nav>
             <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Отзывы</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="services.html">Услуги</a></li>
+                <li><a href="contact.html">Контакты</a></li>
+                <li><a href="news.html">Новости</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="reviews.html">Отзывы</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <blockquote>«Мир можно познать через слово…»</blockquote>
+            <h2>«Мир можно познать через слово…»</h2>
             <p>Добро пожаловать в Shofactom — пространство поэзии, мысли и истории.</p>
         </section>
     </main>
