--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная | Shofactom</title>
+    <title>Shofactom | Главная</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="quotes.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +28,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>«Мир можно познать через слово…»</h2>
+            <blockquote id="quote-of-the-day" style="color: #ffd700; font-size: 1.5em; margin-bottom: 1em;"></blockquote>
             <p>Добро пожаловать в Shofactom — пространство поэзии, мысли и истории.</p>
         </section>
     </main>
